--- a/tests/grab.html
+++ b/tests/grab.html
@@ -7,6 +7,8 @@
 	<link rel="stylesheet" href="qunit/qunit.css" type="text/css" media="screen">
 	<script type="text/javascript" src="qunit/qunit.js"></script>
 	<script type="text/javascript" src="underscore.js"></script>
+	<!--<script type="text/javascript" src="../lib/grab.js"></script>-->
+	<!--<script type="text/javascript" src="../lib/grab.min.js"></script>-->
 	<script type="text/javascript" src="../src/grab.js"></script>
 	<script type="text/javascript" src="grab.js"></script>
 </head>
